base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-registration
  labels:
    app: course-registration
spec:
  type: ClusterIP
  selector:
    app: course-registration
  ports:
    - name: http
      port: 80
      targetPort: http # 8080 (ALB 트래픽)
      protocol: TCP
    - name: management # ★ 추가
      port: 8081
      targetPort: management # 8081 (ServiceMonitor 스크랩 + ALB health check 도달점)
      protocol: TCP
