base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: course-registration-route
spec:
  parentRefs:
    - name: course-registration-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: course-registration # 기존 Service
          port: 80
